--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,22 +1,16 @@
 version: 0.2
 phases:
-  install:
-    runtime-versions:
-      python: 3.12
-    commands:
-      - echo "Installing dependencies..."
-      - pip install -r requirements.txt -t lib
   build:
     commands:
       - echo "Zipping deployment package..."
-      - cd lib
-      - zip -r9 ../deployment_package.zip .
+      - zip -r9 deployment_package.zip processFitbitData.py
       - cd ..
       - zip -g deployment_package.zip processFitbitData.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
-      - aws lambda update-function-code --function-name ProcessFitbitData --zip-file fileb://deployment_package.zip
+      - export AWS_DEFAULT_REGION=us-east-1
+      - aws lambda update-function-code --function-name ProcessFitbitData --zip-file fileb://deployment_package.zip || {echo "Updating Lambda function failed; exit 1;"}
       - echo "DONE!!"
 artifacts:
   files:
