--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,7 @@ phases:
   build:
     commands:
       - echo "Zipping deployment package..."
-      - zip -r9 deployment_package.zip processFitbitData.py
-      - cd ..
-      - zip -g deployment_package.zip processFitbitData.py
+      - zip deployment_package.zip processFitbitData.py
   post_build:
     commands:
       - echo "Updating lambda Function..."
